# NumBits

./: .gitignore  BUILD.md  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  SECURITY.md
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: cmake-multi-platform.yml  codeql.yml  msvc.yml
docs/public/: PLANS.md
examples/: CMakeLists.txt  example_basic.cpp  example_broadcasting.cpp  example_linalg.cpp  example_linear_algebra.cpp  example_math.cpp  example_v05.cpp  test_1.py
include/numbits/: broadcasting.hpp  creation.hpp  indexing.hpp  io.hpp  linear_algebra.hpp  math_functions.hpp  ndarray.hpp  ndarray_manipulation.hpp  numbits.hpp  operations.hpp  random.hpp  types.hpp  utils.hpp
include/numbits/core/: ndarray.hpp  reshape.hpp  shape.hpp  utils.hpp
include/numbits/linalg/: matrix.hpp
include/numbits/ops/: arithmetic.hpp  math.hpp  reduction.hpp
include/numbits/random/: generator.hpp
include/numbits/stats/: statistics.hpp
src/: array.cpp  array_manipulation.cpp  broadcasting.cpp  indexing.cpp  linear_algebra.cpp  math_functions.cpp  ndarray.cpp  ndarray_manipulation.cpp  operations.cpp
tests/: CMakeLists.txt  test_array.cpp  test_core.cpp  test_core.py  test_io.cpp  test_linalg.cpp  test_linear_algebra.cpp  test_operations.cpp  test_v05.cpp
